k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: enterprise-prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: mandalakodanda/frontend:IMAGE_TAG

        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: enterprise-prod

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
