k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: enterprise-prod

spec:
  replicas: 3

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
      - name: payment-service
        image: mandalakodandarao/payment-service:IMAGE_TAG

        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: enterprise-prod

spec:
  selector:
    app: payment-service

  ports:
  - port: 8080
    targetPort: 8080
