k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: enterprise-prod

spec:
  replicas: 3

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
      - name: user-service
        image: mandalakodanda/user-service:IMAGE_TAG

        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: enterprise-prod

spec:
  selector:
    app: user-service

  ports:
  - port: 8080
    targetPort: 8080
